--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
         <div id="leftContainer">
 
             <div id="searchContainer">
-                <div id="searchDiv"></div>
+                <div id="searchDiv">
+
+                    <div class="search-box">
+                        <div class="search-icon"><i class="fa fa-search search-icon"></i></div>
+                        <form action="" class="search-form">
+                          <input type="text" placeholder="Search new place ..." id="search" autocomplete="off">
+                        </form>
+                        <svg class="search-border" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" x="0px" y="0px" viewBox="0 0 671 111" style="enable-background:new 0 0 671 111;"
+                         xml:space="preserve">
+                            <path class="border" d="M335.5,108.5h-280c-29.3,0-53-23.7-53-53v0c0-29.3,23.7-53,53-53h280"/>
+                            <path class="border" d="M335.5,108.5h280c29.3,0,53-23.7,53-53v0c0-29.3-23.7-53-53-53h-280"/>
+                          </svg>
+                        <div class="go-icon"><i class="fa fa-arrow-right"></i></div>
+                      </div>
+
+                </div>
             </div>
 
             <div class="weatherTitle"><h1>Weather <strong>Forecast</strong></h1></div>
@@ -201,5 +216,7 @@
             <div id="todayInfo"></div>
             <div id="extraTodayInfo"></div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="search-bar.js"></script>
     </body>
 </html>
