--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                         </div>
                         <p>New York, USA</p>
                     </div>
+                    <div id="addCity">
+                        <p style="margin-top: 40%;margin-bottom: 10%;font-size: 30px;">+</p>
+                        <p style="margin-top: 17%;font-size:16px">Add City</p>
+                    </div>
                 </div>
 
                 <div id="allWeatherInfo">
