--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <div class="eachHour"><p class="hourText">10:00</p></div>
                         </div>
 
-                        <div id="sevenDayDisplay">
+                        <div class="hidden" id="sevenDayDisplay">
                             <div class="eachDayin7Days">
                                 <div class="dayText">Sunday</div>
                                 <div class="rainChance">
@@ -212,7 +212,123 @@
                                 <button class="button-9" role="button">Recommended Clothing</button>
                             </div>
                         </div>
-                        <div class="hidden" id="monthlyDisplay"></div>
+                        <div id="monthlyDisplay">
+                            <div class="monthRows">
+                                <div class="eachDayInRow">30
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">31
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">1
+                                    <div class="holdClimatePic"><img src="images/cloudyNoSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">2
+                                    <div class="holdClimatePic"><img src="images/cloudyRain.png"></div>
+                                </div>
+                                <div class="eachDayInRow">3
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">4
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">5
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                            </div>
+                            <div class="monthRows">
+                                <div class="eachDayInRow">6
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">7
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">8
+                                    <div class="holdClimatePic"><img src="images/cloudyNoSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">9
+                                    <div class="holdClimatePic"><img src="images/cloudyRain.png"></div>
+                                </div>
+                                <div class="eachDayInRow">10
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">11
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">12
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                            </div>
+                            <div class="monthRows">
+                                <div class="eachDayInRow">13
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">14
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">15
+                                    <div class="holdClimatePic"><img src="images/cloudyNoSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">16
+                                    <div class="holdClimatePic"><img src="images/cloudyRain.png"></div>
+                                </div>
+                                <div class="eachDayInRow">17
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">18
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">19
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                            </div>
+                            <div class="monthRows">
+                                <div class="eachDayInRow">20
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">21
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">22
+                                    <div class="holdClimatePic"><img src="images/cloudyNoSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">23
+                                    <div class="holdClimatePic"><img src="images/cloudyRain.png"></div>
+                                </div>
+                                <div class="eachDayInRow">24
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">25
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">26
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                            </div>
+                            <div class="monthRows">
+                                <div class="eachDayInRow">27
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">28
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">29
+                                    <div class="holdClimatePic"><img src="images/cloudyNoSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">30
+                                    <div class="holdClimatePic"><img src="images/cloudyRain.png"></div>
+                                </div>
+                                <div class="eachDayInRow">1
+                                    <div class="holdClimatePic"><img src="images/cloudyWithSun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">2
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                                <div class="eachDayInRow">3
+                                    <div class="holdClimatePic"><img src="images/sun.png"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -292,6 +408,7 @@
         <script src="search-bar.js"></script>
         <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>   -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>  
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="changeRightContainerHeight.js"></script>  
     </body>
 </html>
