added temp js script to change weather display for weekly/monthly

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div id="allWeatherInfo">
-                    <div id="howDisplayWeather"><h3>Hourly</h3><h3>7 Day</h3><h3>Monthly</h3></div>
+                    <div id="howDisplayWeather"><h3 class="howDisplay">Hourly</h3><h3 class="howDisplay">7 Day</h3><h3 class="howDisplay">Monthly</h3></div>
                     <div id="displayWeather">
                         <div class="hidden" id="hourlyDisplay">
                             <div class="eachHour"><p class="hourText">1:00</p></div>
