implemented Account Settings page on react app

--- a/src/AccountSettings.html
+++ b/src/AccountSettings.html
@@ -20,19 +20,19 @@
                     <h2>Edit Profile</h2>
                     <div id="profileInfo">
                         <div id="firstName">First Name<br><br>
-                            <input type="text" id="fname" name="fname" placeholder="Manny"><br><br>
+                            <input type="text" id="ffirstname" name="fname" placeholder="Manny"><br><br>
                         </div>
                         <div id="LastName">Last Name<br><br>
-                            <input type="text" id="fname" name="fname" placeholder="Soto Ruiz"><br><br>
+                            <input type="text" id="flastname" name="fname" placeholder="Soto Ruiz"><br><br>
                         </div>
                         <div id="city">City<br><br>
-                            <input type="text" id="fname" name="fname" placeholder="New York"><br><br>
+                            <input type="text" id="fcity" name="fname" placeholder="New York"><br><br>
                         </div>
                         <div id="state">State<br><br>
-                            <input type="text" id="fname" name="fname" placeholder="New York"><br><br>
+                            <input type="text" id="fstate" name="fname" placeholder="New York"><br><br>
                         </div>
                         <div id="country">Country<br><br>
-                            <input type="text" id="fname" name="fname" placeholder="United States"><br><br>
+                            <input type="text" id="fcountry" name="fname" placeholder="United States"><br><br>
                         </div>
                         <button type="submit" value="Submit">Save</button>
                     </div>
